--- a/styles/sass/partials/_region.scss
+++ b/styles/sass/partials/_region.scss
@@ -12,7 +12,6 @@
 	position: relative;
 	margin: 0 auto;
 	width: 100%;
-    z-index:9;
 }
 
 .upfront-region-current {
